examples/type_system/failing/84_match_tuple_gap_no_fallback.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/84_match_tuple_gap_no_fallback.flx
// error[E015]: Non-Exhaustive Match
//
// Match is not exhaustive: 1 missing pattern.
//
//   examples/type_system/failing/84_match_tuple_gap_no_fallback.flx:29:1
//    |
// 29 | match t {
//    | ^^^^^^^^^
// 30 |     (1, true) -> 1,
//    | ^^^^^^^^^^^^^^^^^^^
// 31 |     (2, false) -> 2
//    | ^^^^^^^^^^^^^^^^^^^
// 32 | };
//    | ^
//
// Hint:
//   Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E015

// E015: Tuple match without unguarded catch-all is conservatively non-exhaustive.
let t = (1, true);

match t {
    (1, true) -> 1,
    (2, false) -> 2
};
